--- a/style.css
+++ b/style.css
@@ -46,8 +46,13 @@
 }
 
 .button {
+   border-radius: 15px;
    background-color: #3882f6;
    color: #f9faf8 ;
+   padding: 5px 30px;
+   font-size: bold;
+   font-size: 20px;
+   
 }
 
 h1{
@@ -109,6 +114,7 @@ body {
     width: 150px;
     border: 2px solid rgb(77, 77, 230);   
     padding: 10px; 
+    border-radius: 15px;
 }
 
 .box {    
@@ -165,10 +171,12 @@ blockquote {
     display: flex;
     justify-content: space-around;   
     gap: 50px; 
+    border-radius: 15px;
  }
 
  button {
      border: 1px solid white;
+     border-radius: 15px;
      background-color: #3882f6;
      color: white;
      padding: 10px 20px;
